# recipeBook

./: .gitignore
build-recipeBook-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-recipeBook-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-0f1aebcc3e45889ee33e.json  codemodel-v2-c9475cf2bc2f6dec2c83.json  codemodel-v2-f9d22c03155962b4dce1.json  index-2023-03-24T14-56-59-0989.json  index-2023-03-26T14-13-58-0687.json  target-recipeBook-Debug-3b47b328fc346e062fe2.json  target-recipeBook-Debug-a461e8c34dd89d1cee4b.json
build-recipeBook-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-990befb73f6ceef9441d.json  codemodel-v2-1ef6279c4630cc8c83d7.json  codemodel-v2-ae5eb7987be4c3829d23.json  directory-.-Debug-0b2429b94ad3d58c512d.json  index-2023-03-21T15-19-41-0706.json  index-2023-03-26T13-17-33-0216.json  target-recipeBook-Debug-3e5af31deaab9729d0a8.json  target-recipeBook-Debug-6105782b7d51dbb6e2be.json  target-recipeBook_autogen-Debug-de0e4c20c2f7ac46475c.json  target-recipeBook_autogen_timestamp_deps-Debug-3e2328f3a0e7e264f5be.json
build-recipeBook-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-recipeBook-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-recipeBook-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/recipeBook_autogen/: deps  mocs_compilation.cpp
build-recipeBook-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/recipeBook_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_popup.cpp  moc_recipe.cpp  moc_recipepage.cpp
build-recipeBook-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/recipeBook_autogen/include/: ui_mainwindow.h  ui_popup.h  ui_recipe.h  ui_recipepage.h
recipeBook/: CMakeLists.txt  Image.h  ingredients.cpp  ingredients.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  popup.cpp  popup.h  popup.ui  recipe.cpp  recipe.h  recipe.ui  recipeContent.cpp  recipeText.cpp  recipeText.h  recipepage.cpp  recipepage.h  recipepage.ui  req
(+34 files in other folders)
